Fix background swirl not showing in production (#19)
The background GIF was hotlinked from Stack Overflow's CDN, which
returns 403 when the Referer header is from an external domain.
Self-host the image to avoid the hotlink protection.

--- a/css/index.css
+++ b/css/index.css
@@ -55,8 +55,7 @@ body {
 	font-family: var(--font-family);
 	color: var(--text-color);
 	background-color: var(--background-color);
-	/* background-image: url("skybg.gif"); */
-	background-image: url('https://i.sstatic.net/kx8MT.gif');
+	background-image: url('/img/skybg.gif');
 }
 html {
 	overflow-y: scroll;
